--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "Devansh Shah",
   "license": "ISC",
@@ -14,7 +14,9 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
+    "multer-gridfs-storage": "^5.0.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.18"
   }
 }
