--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Devansh Shah",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2"
