--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "Devansh Shah",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/lib-storage": "^3.777.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
@@ -20,9 +22,9 @@
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.15.0",
     "mongoose": "^6.5.2",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
