--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "SET NODE_ENV=development && nodemon index.js",
+    "start" : "SET NODE_ENV=production && node index.js"
   },
   "author": "Devansh Shah",
   "license": "ISC",
