--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Devansh Shah",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.850.0",
+    "@aws-sdk/client-lambda": "^3.851.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "@aws-sdk/lib-storage": "^3.777.0",
     "bcrypt": "^5.0.1",
