--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-lambda": "^3.851.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "@aws-sdk/lib-storage": "^3.777.0",
+    "@aws-sdk/s3-request-presigner": "^3.888.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
